Adds new operationIds for sdk
