# openapi.json
@@ -3,7 +3,7 @@
   "paths": {
     "/v1/products": {
       "get": {
-        "operationId": "ProductsControllerV1_retrieve",
+        "operationId": "getProduct",
         "summary": "Retrieve a product",
         "parameters": [
           {
@@ -38,7 +38,7 @@
         }
       },
       "post": {
-        "operationId": "ProductsControllerV1_create",
+        "operationId": "createProduct",
         "summary": "Creates a new product.",
         "parameters": [
           {
@@ -76,7 +76,7 @@
     },
     "/v1/products/search": {
       "get": {
-        "operationId": "ProductsControllerV1_search",
+        "operationId": "listProducts",
         "summary": "List all products",
         "parameters": [
           {
@@ -122,7 +122,7 @@
     },
     "/v1/customers": {
       "get": {
-        "operationId": "CustomersControllerV1_retrieve",
+        "operationId": "getCustomer",
         "summary": "Retrieve a customer",
         "parameters": [
           {
@@ -206,7 +206,7 @@
     },
     "/v1/subscriptions": {
       "get": {
-        "operationId": "SubscriptionsControllerV1_retrieve",
+        "operationId": "getSubscription",
         "summary": "Retrieve a subscription",
         "parameters": [
           {
@@ -243,7 +243,7 @@
     },
     "/v1/subscriptions/{id}/cancel": {
       "post": {
-        "operationId": "SubscriptionsControllerV1_cancel",
+        "operationId": "cancelSubscription",
         "summary": "Cancel a subscription.",
         "parameters": [
           {
@@ -279,7 +279,7 @@
     },
     "/v1/subscriptions/{id}": {
       "post": {
-        "operationId": "SubscriptionsControllerV1_update",
+        "operationId": "updateSubscription",
         "summary": "Update a subscription.",
         "parameters": [
           {
@@ -325,7 +325,7 @@
     },
     "/v1/checkouts": {
       "get": {
-        "operationId": "CheckoutsControllerV1_retrieve",
+        "operationId": "getCheckout",
         "summary": "Retrieve a new checkout session.",
         "parameters": [
           {
@@ -359,7 +359,7 @@
         }
       },
       "post": {
-        "operationId": "CheckoutsControllerV1_createCheckout",
+        "operationId": "createCheckout",
         "summary": "Creates a new checkout session.",
         "parameters": [
           {
@@ -397,7 +397,7 @@
     },
     "/v1/licenses/activate": {
       "post": {
-        "operationId": "LicensesControllerV1_activate",
+        "operationId": "activateLicense",
         "summary": "Activates a license key.",
         "parameters": [
           {
@@ -435,7 +435,7 @@
     },
     "/v1/licenses/deactivate": {
       "post": {
-        "operationId": "LicensesControllerV1_deactivate",
+        "operationId": "deactivateLicense",
         "summary": "Deactivate a license key instance.",
         "parameters": [
           {
@@ -473,7 +473,7 @@
     },
     "/v1/licenses/validate": {
       "post": {
-        "operationId": "LicensesControllerV1_validate",
+        "operationId": "validateLicense",
         "summary": "Validates a license key or instance.",
         "parameters": [
           {
@@ -511,7 +511,7 @@
     },
     "/v1/discounts": {
       "get": {
-        "operationId": "DiscountsControllerV1_retrieve",
+        "operationId": "getDiscount",
         "summary": "Retrieve discount",
         "parameters": [
           {
@@ -555,7 +555,7 @@
         }
       },
       "post": {
-        "operationId": "DiscountsControllerV1_create",
+        "operationId": "createDiscount",
         "summary": "Create a discount.",
         "parameters": [
           {
@@ -593,7 +593,7 @@
     },
     "/v1/discounts/{id}/delete": {
       "delete": {
-        "operationId": "DiscountsControllerV1_delete",
+        "operationId": "deleteDiscount",
         "summary": "Delete a discount.",
         "parameters": [
           {
