# src/funcs/customersControllerV1Retrieve.ts
@@ -1,158 +1,0 @@
-/*
- * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
- */
-
-import { CreemCore } from "../core.js";
-import { encodeFormQuery, encodeSimple } from "../lib/encodings.js";
-import * as M from "../lib/matchers.js";
-import { compactMap } from "../lib/primitives.js";
-import { safeParse } from "../lib/schemas.js";
-import { RequestOptions } from "../lib/sdks.js";
-import { pathToFunc } from "../lib/url.js";
-import * as components from "../models/components/index.js";
-import { APIError } from "../models/errors/apierror.js";
-import {
-  ConnectionError,
-  InvalidRequestError,
-  RequestAbortedError,
-  RequestTimeoutError,
-  UnexpectedClientError,
-} from "../models/errors/httpclienterrors.js";
-import { SDKValidationError } from "../models/errors/sdkvalidationerror.js";
-import * as operations from "../models/operations/index.js";
-import { APICall, APIPromise } from "../types/async.js";
-import { Result } from "../types/fp.js";
-
-/**
- * Retrieve a customer
- */
-export function customersControllerV1Retrieve(
-  client: CreemCore,
-  request: operations.CustomersControllerV1RetrieveRequest,
-  options?: RequestOptions,
-): APIPromise<
-  Result<
-    components.CustomerEntity,
-    | APIError
-    | SDKValidationError
-    | UnexpectedClientError
-    | InvalidRequestError
-    | RequestAbortedError
-    | RequestTimeoutError
-    | ConnectionError
-  >
-> {
-  return new APIPromise($do(
-    client,
-    request,
-    options,
-  ));
-}
-
-async function $do(
-  client: CreemCore,
-  request: operations.CustomersControllerV1RetrieveRequest,
-  options?: RequestOptions,
-): Promise<
-  [
-    Result<
-      components.CustomerEntity,
-      | APIError
-      | SDKValidationError
-      | UnexpectedClientError
-      | InvalidRequestError
-      | RequestAbortedError
-      | RequestTimeoutError
-      | ConnectionError
-    >,
-    APICall,
-  ]
-> {
-  const parsed = safeParse(
-    request,
-    (value) =>
-      operations.CustomersControllerV1RetrieveRequest$outboundSchema.parse(
-        value,
-      ),
-    "Input validation failed",
-  );
-  if (!parsed.ok) {
-    return [parsed, { status: "invalid" }];
-  }
-  const payload = parsed.value;
-  const body = null;
-
-  const path = pathToFunc("/v1/customers")();
-
-  const query = encodeFormQuery({
-    "customer_id": payload.customer_id,
-    "email": payload.email,
-  });
-
-  const headers = new Headers(compactMap({
-    Accept: "application/json",
-    "x-api-key": encodeSimple("x-api-key", payload["x-api-key"], {
-      explode: false,
-      charEncoding: "none",
-    }),
-  }));
-
-  const context = {
-    baseURL: options?.serverURL ?? client._baseURL ?? "",
-    operationID: "CustomersControllerV1_retrieve",
-    oAuth2Scopes: [],
-
-    resolvedSecurity: null,
-
-    securitySource: null,
-    retryConfig: options?.retries
-      || client._options.retryConfig
-      || { strategy: "none" },
-    retryCodes: options?.retryCodes || ["429", "500", "502", "503", "504"],
-  };
-
-  const requestRes = client._createRequest(context, {
-    method: "GET",
-    baseURL: options?.serverURL,
-    path: path,
-    headers: headers,
-    query: query,
-    body: body,
-    timeoutMs: options?.timeoutMs || client._options.timeoutMs || -1,
-  }, options);
-  if (!requestRes.ok) {
-    return [requestRes, { status: "invalid" }];
-  }
-  const req = requestRes.value;
-
-  const doResult = await client._do(req, {
-    context,
-    errorCodes: ["4XX", "5XX"],
-    retryConfig: context.retryConfig,
-    retryCodes: context.retryCodes,
-  });
-  if (!doResult.ok) {
-    return [doResult, { status: "request-error", request: req }];
-  }
-  const response = doResult.value;
-
-  const [result] = await M.match<
-    components.CustomerEntity,
-    | APIError
-    | SDKValidationError
-    | UnexpectedClientError
-    | InvalidRequestError
-    | RequestAbortedError
-    | RequestTimeoutError
-    | ConnectionError
-  >(
-    M.json(200, components.CustomerEntity$inboundSchema),
-    M.fail("4XX"),
-    M.fail("5XX"),
-  )(response);
-  if (!result.ok) {
-    return [result, { status: "complete", request: req, response }];
-  }
-
-  return [result, { status: "complete", request: req, response }];
-}
