# src/mcp-server/tools/getCheckout.ts
@@ -1,0 +1,35 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import { getCheckout } from "../../funcs/getCheckout.js";
+import * as operations from "../../models/operations/index.js";
+import { formatResult, ToolDefinition } from "../tools.js";
+
+const args = {
+  request: operations.GetCheckoutRequest$inboundSchema,
+};
+
+export const tool$getCheckout: ToolDefinition<typeof args> = {
+  name: "get-checkout",
+  description: `Retrieve a new checkout session.`,
+  args,
+  tool: async (client, args, ctx) => {
+    const [result, apiCall] = await getCheckout(
+      client,
+      args.request,
+      { fetchOptions: { signal: ctx.signal } },
+    ).$inspect();
+
+    if (!result.ok) {
+      return {
+        content: [{ type: "text", text: result.error.message }],
+        isError: true,
+      };
+    }
+
+    const value = result.value;
+
+    return formatResult(value, apiCall);
+  },
+};
