# src/mcp-server/tools/getDiscount.ts
@@ -1,0 +1,35 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import { getDiscount } from "../../funcs/getDiscount.js";
+import * as operations from "../../models/operations/index.js";
+import { formatResult, ToolDefinition } from "../tools.js";
+
+const args = {
+  request: operations.GetDiscountRequest$inboundSchema,
+};
+
+export const tool$getDiscount: ToolDefinition<typeof args> = {
+  name: "get-discount",
+  description: `Retrieve discount`,
+  args,
+  tool: async (client, args, ctx) => {
+    const [result, apiCall] = await getDiscount(
+      client,
+      args.request,
+      { fetchOptions: { signal: ctx.signal } },
+    ).$inspect();
+
+    if (!result.ok) {
+      return {
+        content: [{ type: "text", text: result.error.message }],
+        isError: true,
+      };
+    }
+
+    const value = result.value;
+
+    return formatResult(value, apiCall);
+  },
+};
