# src/mcp-server/tools/getProduct.ts
@@ -1,0 +1,35 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import { getProduct } from "../../funcs/getProduct.js";
+import * as operations from "../../models/operations/index.js";
+import { formatResult, ToolDefinition } from "../tools.js";
+
+const args = {
+  request: operations.GetProductRequest$inboundSchema,
+};
+
+export const tool$getProduct: ToolDefinition<typeof args> = {
+  name: "get-product",
+  description: `Retrieve a product`,
+  args,
+  tool: async (client, args, ctx) => {
+    const [result, apiCall] = await getProduct(
+      client,
+      args.request,
+      { fetchOptions: { signal: ctx.signal } },
+    ).$inspect();
+
+    if (!result.ok) {
+      return {
+        content: [{ type: "text", text: result.error.message }],
+        isError: true,
+      };
+    }
+
+    const value = result.value;
+
+    return formatResult(value, apiCall);
+  },
+};
