# src/mcp-server/tools/getSubscription.ts
@@ -1,0 +1,35 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import { getSubscription } from "../../funcs/getSubscription.js";
+import * as operations from "../../models/operations/index.js";
+import { formatResult, ToolDefinition } from "../tools.js";
+
+const args = {
+  request: operations.GetSubscriptionRequest$inboundSchema,
+};
+
+export const tool$getSubscription: ToolDefinition<typeof args> = {
+  name: "get-subscription",
+  description: `Retrieve a subscription`,
+  args,
+  tool: async (client, args, ctx) => {
+    const [result, apiCall] = await getSubscription(
+      client,
+      args.request,
+      { fetchOptions: { signal: ctx.signal } },
+    ).$inspect();
+
+    if (!result.ok) {
+      return {
+        content: [{ type: "text", text: result.error.message }],
+        isError: true,
+      };
+    }
+
+    const value = result.value;
+
+    return formatResult(value, apiCall);
+  },
+};
